tests/ui/unnamed_receiver.stderr
error: unnamed receiver type is only allowed if the surrounding extern block contains exactly one extern type; use `self: &mut TheType`
 --> tests/ui/unnamed_receiver.rs:6:14
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
6 |         fn f(&mut self);
  |              ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unnamed receiver type is only allowed if the surrounding extern block contains exactly one extern type; use `self: &TheType`
  --> tests/ui/unnamed_receiver.rs:10:20
   |
1  | #[cxx::bridge]
   | -------------- in this procedural macro expansion
...
10 |         fn f(self: &Self);
   |                    ^^^^^
   |
   = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
